it/ls/unifi/templates.yaml
---
# Source: unifi/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unifi
    app.kubernetes.io/version: v7.1.66
    helm.sh/chart: unifi-5.0.0
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: controller
    protocol: TCP
    name: controller
  - port: 10001
    targetPort: discovery
    protocol: UDP
    name: discovery
  - port: 8443
    targetPort: http
    protocol: TCP
    name: http
  - port: 6789
    targetPort: speedtest
    protocol: TCP
    name: speedtest
  - port: 3478
    targetPort: stun
    protocol: UDP
    name: stun
  - port: 5514
    targetPort: syslog
    protocol: UDP
    name: syslog
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
---
# Source: unifi/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unifi
    app.kubernetes.io/version: v7.1.66
    helm.sh/chart: unifi-5.0.0
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
      app.kubernetes.io/instance: unifi
  template:
    metadata:
      
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/instance: unifi
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 999
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: unifi
          image: "jacobalberty/unifi:v7.1.66"
          imagePullPolicy: IfNotPresent
          ports:
            - name: controller
              containerPort: 8080
              protocol: TCP
            - name: discovery
              containerPort: 10001
              protocol: UDP
            - name: http
              containerPort: 8443
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: syslog
              containerPort: 5514
              protocol: UDP
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
---
# Source: unifi/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unifi
    app.kubernetes.io/version: v7.1.66
    helm.sh/chart: unifi-5.0.0
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
